🚀 Updated Smart Waste project files (frontend + backend latest changes)